# python2-OrderedDict

./: README.md  ordereddict.py  pyproject.toml
.github/workflows/: run-tests.yml
tests/: test_methods.py  test_operations.py  test_properties.py
